Fixed listing page layout bugs

--- a/src/style/new-listing-page.css
+++ b/src/style/new-listing-page.css
@@ -12,13 +12,6 @@
     text-align: left;
     font-size: 20pt;
   }
-
-  #listing-page-container{
-    display: flex;
-    flex-direction: column;
-    background-color: #FCFCFC;
-    height: 100%;
-  }
   
   #map-button{
     display: flex;
@@ -80,13 +73,6 @@
     text-transform: uppercase;
     background-color: #f5b891;
     color: black
-  }
-  
-  .article-list-container{
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-color: #FCFCFC;
   }
   
   #articles-container{
